[package]
name = "amqprs-reconnect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = { version = "1.0.8", features = ["traces", "tracing"] }
anyhow = "1.0.69"
async-trait = "0.1.64"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
