[package]
name = "amqprs-reconnect"
version = "0.1.0"
edition = "2021"

[dependencies]
amqprs = { git = "https://github.com/gftea/amqprs.git", tag = "v1.1.0-rc.1", features = ["traces", "tracing"] }
anyhow = "1.0.69"
async-trait = "0.1.64"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
